...
}

private const val MONSTERS_RESPONSE = """
    {
  "data": [
    { "id": 120, "name": "silver lizalfos" },
    { "id": 121, "name": "guardian scout iv" },
    { "id": 122, "name": "ice-breath lizalfos" },
    { "id": 123, "name": "stone talus (rare)" },
    { "id": 124, "name": "lizalfos" } 
    ] }
    """
